# tomcat-faceAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
data/: README.md
src/: CMakeLists.txt  FaceAnalyzer.cpp  NFSSensor.cpp  NFSSensor.h  Sensor.cpp  Sensor.h  WebcamSensor.cpp  WebcamSensor.h  client.cpp  inotifyTest.c  inotifyTest.cpp  server.cpp  test  testserver.cpp
tools/: configuration_helpers  install  install_dependencies  json2csv  process_directory
