find_package(nlohmann_json REQUIRED)
find_package(Boost COMPONENTS program_options filesystem date_time REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Threads REQUIRED)
add_executable(faceAnalyzer WebcamSensor.cpp FaceAnalyzer.cpp)
add_executable(client client.cpp)
add_executable(server server.cpp)
target_include_directories(faceAnalyzer PRIVATE ${openface_include_dirs})
target_include_directories(client ${OpenCV_INCLUDE_DIRS})
target_include_directories(server ${OpenCV_INCLUDE_DIRS})
target_link_libraries(faceAnalyzer PRIVATE OpenFace nlohmann_json::nlohmann_json
                                         ${Boost_LIBRARIES})
target_link_libraries(client ${OpenCV_LIBS})
target_link_libraries(server ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
